<resources>
    <string name="app_name">BabyMed</string>
    <string name="add_child" translatable="false">Add Child</string>
    <string name="my_children">Мои дети</string>
    <string name="add_new_child" translatable="false">Add one more child</string>
    <string name="child" translatable="false">child</string>
    <string name="avatar_selection">Выберите аватар</string>
    <string name="from_gallery">Из галереи</string>
    <string name="from_сamera">С камеры</string>
    <string name="male">мальчик</string>
    <string name="female">девочка</string>
    <string name="select_gender">Выберите пол ребенка</string>
    <string name="enter_birthdate">Введите дату рождения ребенка</string>
    <string name="enter_name">Введите имя ребенка</string>
    <string name="empty_fields_not_allowed">Поля не должны быть пустыми.</string>
    <string name="empty_illness_not_allowed">Название заболевания не должно быть пустым</string>
    <string name="data_saved">Данные успешно сохранены</string>
    <string name="edit">Редактировать</string>
    <string name="delete">Удалить</string>
    <string name="child_is_deleted">Данные о ребенке удалены</string>
    <string name="illness_descrip_female"> %1$s болела %2$s</string>
    <string name="illness_descrip_male"> %1$s болел %2$s</string>
    <string name="illness_list_item_descrip">  в %1$d лет при массе %2$d кг</string>
    <string name="warning">Предупреждение!</string>
    <string name="deleting_child_data_confirm">Вы уверены, что хотите безвозвратно удалить данные об этом ребенке?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="deleting_illness_data_confirm">Вы уверены, что хотите безвозвратно удалить историю данной болезни?</string>
    <string name="share">Поделиться</string>
    <string name="settings">Настройки</string>
    <string name="child_age">%1$s лет</string>
    <string name="save">Сохранить</string>
    <string name="my_child">Мой ребенок</string>
    <string name="gender">Пол</string>
    <string name="blood_type">Группа крови</string>
    <string name="weight">Вес</string>
    <string name="birthdate">Дата рождения</string>
    <string name="age">Возраст</string>
    <string name="new_illness">Новое заболевание  </string>
    <string name="illness_name">Название заболевания</string>
    <string name="date">Дата</string>
    <string name="symptoms">Симптомы</string>
    <string name="treatment">Лечение</string>
    <string name="add_photo">Добавить фото</string>
    <string name="illness">Заболевание</string>
    <string name="illness_is_deleted">Данные о заболевании успешно удалены</string>
    <string name="illness_editing">Редактирование заболевания %1$s</string>
    <string name="send_feedback">Оставить отзыв</string>
    <string name="exit">Выйти</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="toRegister">Зарегистрироваться</string>
    <string name="orSignIn">или авторизоваться</string>
    <string name="google" translatable="false">Google</string>
    <string name="or">Или</string>
    <string name="confirmPasword">Пароль еще раз</string>
    <string name="enter_login">Введите логин</string>
    <string name="enter_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="password_does_not_match">Пароли не совпадают</string>
    <string name="authorization">Авторизация</string>
    <string name="enter">Войти</string>
    <string name="auth_problems">Проблемы с авторизацией.</string>
    <string name="something_went_wrong">Что-то пошло не так. Повторите позже</string>
    <string name="user_is_not_found">Такого пользователя не существует. Пожалуйста авторизуйтесь.</string>
    <string name="password_length_validating">Длина пароля должна быть не меньше 6 символов</string>
    <string name="username">Имя</string>
    <string name="welcome">Привет %1$s. Добро пожаловать в BabyMed!</string>
    <string name="sortByName">Сортировать по имени</string>
    <string name="sortByBirthdate">Сортировать по дате рождения</string>
    <string name="sortByBirthdateAsc">Сортировать по убыванию возраста</string>
    <string name="sortByBirthdateDesc">Сортировать по возрастанию возраста</string>
    <string name="child_diseases">Перенесенные заболевания</string>
    <string name="blood_type_0_pos" translatable="false"> 1(0) Rh+</string>
    <string name="blood_type_0_neg" translatable="false"> 1(0) Rh-</string>
    <string name="blood_type_A_pos" translatable="false"> 2(A) Rh+</string>
    <string name="blood_type_A_neg" translatable="false"> 2(A) Rh-</string>
    <string name="blood_type_B_pos" translatable="false"> 3(B) Rh+</string>
    <string name="blood_type_B_neg" translatable="false"> 3(B) Rh-</string>
    <string name="blood_type_AB_pos" translatable="false"> 4(AB) Rh+</string>
    <string name="blood_type_AB_neg" translatable="false"> 4(AB) Rh-</string>
    <string name="nothing_here_but_me">Никого, кроме меня нет</string>
    <string name="comment_to_empty_list">У вас еще нет детей в данном списке. Чтобы добавить ребенка нажмите на кнопку +</string>
    <string name="emptyIllnessesListDescrip">У ребенка не было заболеваний и это прекрасно! Чтобы добавить историю заболеваний нажмите на кнопку +</string>
    <string name="emptyIllnessesList">Cписок перенесенных заболеваний пуст</string>
</resources>
